footer fix spacing

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -64,6 +64,7 @@ footer .footer .footer-section-one {
 .footer-section-two ul{
   display: flex;
   flex-wrap: wrap;
+  margin: 0;
 }
 .footer-section-two ul li,
 .footer-section-two p {
